chore(cart): modify logic to accomodate fulfillment split logic in backend
